fix styles with dark mode toggle

--- a/src/components/navigation/NavigationBar/NavigationBar.module.css
+++ b/src/components/navigation/NavigationBar/NavigationBar.module.css
@@ -24,6 +24,9 @@
 }
 
 .navigation-toggle-container {
+  position: absolute;
+  top: 0;
+  right: 0;
   grid-area: toggle;
   display: inline-flex;
   align-self: flex-start;
@@ -31,5 +34,4 @@
   column-gap: 1rem;
   width: fit-content;
   margin: 1rem;
-  margin-left: calc(-36px - 1rem);
 }
